--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -11,6 +11,8 @@ bappsController$GoogleAppsCommand.definedTokenConfirmation.size.toosmall=Token C
 bappsController$GoogleAppsCommand.definedTokenConfirmation.size.toolarge=Token Confirmation does not meet the CalNet passphrase requirements for length.
 googleAppsCommand.definedToken.donotmatch=Token and Token Confirmation do not match.
 googleAppsCommand.definedTokenConfirmation.donotmatch=Token and Token Confirmation do not match.
+googleAppsCommand.definedToken.cannotmatchcalnet=Token can not be the same as your CalNet Passphrase.
+googleAppsCommand.definedToken.doesnotmeetrequirements=Token does not meet the CalNet Passphrase complexity requirements.
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
@@ -75,7 +77,7 @@ general.tokens=Tokens
 
 # Navigation
 navigation.manage.wpa=AirBears2 Login Token
-navigation.manage.bapps=bApps Login Token
+navigation.manage.bapps=bApps (Google) Login Token
 navigation.other=My CalNet
 
 # Main page
@@ -83,7 +85,7 @@ overview.welcome=Welcome
 overview.welcomeMessage=Welcome to the Application-specific Token Management app. The login tokens you generate with this application can be used from mobile devices and desktop clients. The login token is <strong>not</strong> a replacement for your CalNet Passphrase, which you will continue to use when doing web-based authentication.
 overview.optionsHeading=Choose Service
 overview.wpaLink=AirBears2
-overview.bAppsLink=bApps
+overview.bAppsLink=bApps (Google)
 
 
 # WPA pages
@@ -112,33 +114,33 @@ wpa.viewPage.pageRefreshWarning=<strong>Warning:</strong> Once you leave this pa
 wpa.view.returnToIndexLink=&laquo; Return to Token Options
 
 # bApps pages
-bapps.choose.heading=Choose bApps Account
+bapps.choose.heading=Choose bApps (Google) Account
 bapps.index.heading=bApps Login Token <small>for account {0}</small>
-bapps.index.generalMessage=This system will generate a login token that will enable you to access ...
-
+bapps.index.generalMessage=This system will generate a login token that will enable you to access your Berkeley Google Apps for Education account (bMail, bCal, bDocs) for mobile devices and desktop clients.
 bapps.index.optionsHeading=Token Options
 bapps.index.optionsSetLink=Set Token...
 bapps.index.optionsViewLink=View Token...
 bapps.index.optionsDeleteLink=Delete Token...
-bapps.index.moreThanOneAccountMessage=You have more than one bApps account for which you can set a token. Please select an account from the list below.
+bapps.index.moreThanOneAccountMessage=
 bapps.index.returnToAccountsLink=&laquo; Return to Accounts List
 
 bapps.noaccounts.generalMessage=According to our records, you currently do not have any accounts on the Google Apps system. If you think this is incorrect, please contact...
 
 bapps.setPage.heading=Set bApps Login Token <small>for account {0}</small>
 bapps.setPage.legend=Generate Token
-bapps.setPage.generalMessage=Use the form below to set your bApps Login Token <strong>for account {0}</strong>. If you do not like the token which has been generated for you, you may generate a new one by clicking on the "Generate a different token..." button. Or, you can set your own by clicking on "Define Your Own" tab and then entering a token in the provided form.
+bapps.setPage.generalMessage=Use the form below to set your bApps Login Token for account <strong>{0}</strong>. If you do not like the token which has been generated for you, you may generate a new one by clicking on the "Generate a different token..." button. Or, you can set your own by clicking on "Define Your Own" tab and then entering a token in the provided form.
 
 bapps.delete.heading=Delete bApps Login Token <small>for account {0}</small>
-bapps.delete.generalMessage=If you wish to delete your bApps Login Token <strong>for account {0}</strong>, click the "Delete Token" button below.
+bapps.delete.generalMessage=If you wish to delete your bApps Login Token for account <strong>{0}</strong>, click the "Delete Token" button below.
+bapps.delete.deleteInfo=<strong>Note:</strong> If you have not previously set a token, this will report a successful deletion.
 
 bapps.formPage.generateToken=Generate a different token...
 bapps.formPage.tokenHelpText=Once you save the token, you will be taken to another page where you can select and copy the token.
 bapps.formPage.tokenHelpTextForUserDefined=Token must meet the same requirements as the <a href="https://wikihub.berkeley.edu/display/calnet/Passphrase+Requirements" target="_blank">CalNet passphrase</a>, but the token <strong>can not be the same as your current CalNet passphrase</strong>.
 
 bapps.viewPage.heading=Your bApps Login Token <small>for account {0}</small>
-bapps.viewPage.generalMessage=Your bApps Login Token <strong>for account {0}</strong> is below. Please copy this token to your clipboard immediately so that you have it, as this is the only time you will be able to view this token.
-bapps.viewPage.pageRefreshWarning=<strong>Note:</strong> Once you leave this page you will not be able to use your back button to view the token again. So please copy the token now so that you have it saved should you leave this page. If you forget this token you can generate a new one at any time.
+bapps.viewPage.generalMessage=Your bApps Login Token for account <strong>{0}</strong> is below. Please copy this token to your clipboard immediately so that you have it, as this is the only time you will be able to view this token.
+bapps.viewPage.pageRefreshWarning=<strong>Note:</strong> Once you leave this page you will not be able to use your back button to view the token again. So please copy the token now so that you have it saved should you leave this page. If you forget this token you can generate a new one at any time and you will need to replace it on all your configured devices.
 bapps.viewPage.returnToIndexLink=&laquo; Return to Token Options
 
 # Authentication messages
@@ -158,8 +160,8 @@ wpa.alert.save.success=AirBears2 Login Token saved successfully.
 wpa.alert.delete.success=AirBears2 Login Token deleted successfully.
 wpa.alert.save.canNotSetError=You are not allowed to set your own token for the AirBears2 service.
 
-bapps.alert.save.success=bApps Login Token saved successfully <strong>for account {0}</strong>.
-bapps.alert.delete.success=bApps Login Token deleted successfully <strong>for account {0}</strong>.
+bapps.alert.save.success=bApps Login Token saved successfully for account <strong>{0}</strong>. This is the token you will use on any mobile device (phones, iPads) and desktop clients.  If you need assistance in setting up your devices, please see the <a href="https://kb.berkeley.edu/jivekb/kbcategory.jspa?categoryID=102" target="_blank">Google Apps Knowledge Base</a> section.
+bapps.alert.delete.success=bApps Login Token deleted successfully for account <strong>{0}</strong>.
 bapps.alert.save.canNotSetError=If you choose the generated token, you must not change its value.
 
 # Email messages - Not used because you can not get messages in a service
