As part of MMT-4, updated messages and subjects, and moved hard-coded messages inside of the gsp emails to i18n messages in messages.properties.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -90,7 +90,7 @@ overview.bAppsLink=bApps (Google)
 
 # WPA pages
 wpa.index.heading=AirBears2 Login Token
-wpa.index.generalMessage=This system will generate a login token that will enable you to access UC Berkeley's AirBears2 encrypted WiFi network.</p><p>For more information on AirBears2 and Wi-Fi Service on the UC Berkeley campus, please see the <a href="http://ist.berkeley.edu/airbears" target="_blank">AirBears website</a>.</p><p>Proceeding to generate a new AirBears2 Login Token will invalidate any previously generated Airbears2 Token.  If you have entered a previously generated token in any of your devices, you will need to re-enter the new token on those devices.
+wpa.index.generalMessage=This system will generate a login token that will enable you to access UC Berkeley's AirBears2 encrypted WiFi network.</p><p>For more information on AirBears2 and Wi-Fi Service on the UC Berkeley campus, please see the <a href="http://ist.berkeley.edu/airbears" target="_blank">AirBears website</a>.</p><p>Proceeding to generate a new AirBears2 Login Token will invalidate any previously generated Airbears2 Token. If you have entered a previously generated token in any of your devices, you will need to re-enter the new token on those devices.
 
 wpa.index.optionsHeading=Token Options
 wpa.index.optionsSetLink=Set Token...
@@ -116,7 +116,7 @@ wpa.view.returnToIndexLink=&laquo; Return to Token Options
 # bApps pages
 bapps.choose.heading=Choose bApps (Google) Account
 bapps.index.heading=bApps Login Token <small>for account {0}</small>
-bapps.index.generalMessage=This system will generate a login token that will enable you to access your Berkeley Google Apps for Education account (bMail, bCal, bDocs) for mobile devices and desktop clients.
+bapps.index.generalMessage=This system will generate a login token that will enable you to access your Berkeley Google Apps for Education account (bMail, bCal, bDocs) for mobile devices and desktop clients.</p><p>For more information on Berkeley Google Apps for Education, please see the <a href="http://technology.berkeley.edu/productivity-suite/google/index.html" target="_blank">bMail | bCal Productivity Suite project page</a>.</p><p>Proceeding to generate a new bApps (Google) Login Token will invalidate any previously generated Login Token. If you have entered a previously generated token in any of your devices, you will need to re-enter the new token on those devices.
 bapps.index.optionsHeading=Token Options
 bapps.index.optionsSetLink=Set Token...
 bapps.index.optionsViewLink=View Token...
@@ -164,9 +164,44 @@ bapps.alert.save.success=bApps Login Token saved successfully for account <stron
 bapps.alert.delete.success=bApps Login Token deleted successfully for account <strong>{0}</strong>.
 bapps.alert.save.canNotSetError=If you choose the generated token, you must not change its value.
 
-# Email messages - Not used because you can not get messages in a service
-wpa.email.setSubject=AirBears2 Login Token Set
-wpa.email.deleteSubject=AirBears2 Login Token Deleted
+# Email messages, so do not use HTML.
+# See myt-config.properties for the Subjects.
+# These are multi-line messages, so be careful when editing.
+# The ### marks are just to show where they begin and end.
+
+### WPA Set Confirmation
+wpa.email.setConfirmation=Hello {0},\n \
+\n \
+This email is to confirm that you have generated a new Airbears2 Login Token via the online tool at {1}.\n \
+\n \
+For more information on this token, AirBears2 and the UC Berkeley Wi-Fi network, please visit http://ist.berkeley.edu/airbears.
+###
+
+### WPA Delete Confirmation
+wpa.email.deleteConfirmation=Hello {0},\n \
+\n \
+This email is to confirm that you have deleted your Airbears2 Login Token via the online tool at {1}.\n \
+\n \
+For more information on this token, AirBears2 and the UC Berkeley Wi-Fi network, please visit http://ist.berkeley.edu/airbears.
+###
+
+### bApps Set Confirmation
+bapps.email.setConfirmation=Hello {0},\n \
+\n \
+This email is to confirm that you have generated a new bApps (Google) Login Token for account {1} via the online tool at {2}.\n \
+\n \
+If you did not generate your token, please contact consult@berkeley.edu immediately.\n \
+\n \
+If you need assistance in setting up your devices, please see the Google Apps Knowledge Base section (https://kb.berkeley.edu/jivekb/kbcategory.jspa?categoryID=102).
+###
+
+### bApps Delete Confirmation
+bapps.email.deleteConfirmation=Hello {0},\n \
+\n \
+This email is to confirm that you have deleted a bApps (Google) Login Token for account {1} via the online tool at {2}.\n \
+\n \
+If you did not delete your token, please contact consult@berkeley.edu immediately.
+###
 
 # Log messages - Not used because you can not get messages in a service
 wpa.log.setToken=Set WPA token for: [uid: {0}], [username: {1}].
