--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -157,12 +157,20 @@ authZ.notEligibleBAppsMessage=Unfortunately you are either not enabled or not el
 
 # Alert messages
 wpa.alert.save.success=AirBears2 Login Token saved successfully.
+wpa.alert.save.successForTitle=AirBears2 Login Token saved successfully. See token details below.
 wpa.alert.delete.success=AirBears2 Login Token deleted successfully.
+wpa.alert.delete.successForTitle=AirBears2 Login Token deleted successfully.
 wpa.alert.save.canNotSetError=You are not allowed to set your own token for the AirBears2 service.
+wpa.alert.save.canNotSetErrorForTitle=You are not allowed to set your own token for the AirBears2 service.
 
 bapps.alert.save.success=bApps Login Token saved successfully for account <strong>{0}</strong>. This is the token you will use on any mobile device (phones, iPads) and desktop clients.  If you need assistance in setting up your devices, please see the <a href="https://kb.berkeley.edu/jivekb/kbcategory.jspa?categoryID=102" target="_blank">Google Apps Knowledge Base</a> section.
+bapps.alert.save.successForTitleDefined=bApps Login Token saved successfully for account {0}.
+bapps.alert.save.successForTitleGenerated=bApps Login Token saved successfully for account {0}. See token details below.
 bapps.alert.delete.success=bApps Login Token deleted successfully for account <strong>{0}</strong>.
+bapps.alert.delete.successForTitle=bApps Login Token deleted successfully for account {0}.
 bapps.alert.save.canNotSetError=If you choose the generated token, you must not change its value.
+bapps.alert.save.canNotSetErrorForTitle=If you choose the generated token, you must not change its value.
+bapps.alert.save.errorForTitle=Error(s) setting token. See more details below.
 
 # Email messages, so do not use HTML.
 # See myt-config.properties for the Subjects.
