For accessibility, we have added the page title to the <title> tag, as a lot of screen readers read the title, then just jump to the last place visited on the page; ticket MMT-8.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -80,13 +80,25 @@ navigation.manage.wpa=AirBears2 Login Key
 navigation.manage.bapps=bApps (Google) Login Key
 navigation.other=My CalNet
 
+# Page Titles
+auth.index.title=Login via CalNet
+main.index.title=Welcome
+bapps.index.title=bApps (Google) Login Key Options
+bapps.choose.title=Choose bApps (Google) Account
+bapps.set.title=Set bApps (Google) Login Key
+bapps.view.title=Your bApps (Google) Login Key
+bapps.delete.title=Delete bApps (Google) Login Key
+wpa.index.title=AirBears2 Login Key Option(s)
+wpa.set.title=Set AirBears2 Login Key
+wpa.view.title=Your AirBears2 Login Key
+wpa.delete.title=Delete AirBears2 Login Key
+
 # Main page
 overview.welcome=Welcome
 overview.welcomeMessage=Welcome to the Application-specific Key Management app. The login keys you generate with this application can be used from mobile devices and desktop clients. The login key is <strong>not</strong> a replacement for your CalNet Passphrase, which you will continue to use when doing web-based authentication.
 overview.optionsHeading=Choose Service
 overview.wpaLink=AirBears2
 overview.bAppsLink=bApps (Google)
-
 
 # WPA pages
 wpa.index.heading=AirBears2 Login Key
