Change 'null' to 'blank' for message, as there was already a 'null' key message.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -2,7 +2,7 @@
 wpa.username.null=Username cannot be blank.
 wpa.username.blank=Username cannot be blank.
 wpa.password.null=Key cannot be blank.
-wpa.password.null=Key cannot be blank.
+wpa.password.blank=Key cannot be blank.
 
 # bApps GoogleCommand messages
 bappsController$GoogleAppsCommand.definedKey.size.toosmall=Key does not meet the CalNet passphrase requirements for length.
