Updated error messages so that they work with the 'key' nomenclature, and also added title messages; tickets MMT-8, MMT-10.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -5,10 +5,10 @@ wpa.password.null=Key cannot be blank.
 wpa.password.blank=Key cannot be blank.
 
 # bApps GoogleCommand messages
-bappsController$GoogleAppsCommand.definedKey.size.toosmall=Key does not meet the CalNet passphrase requirements for length.
-bappsController$GoogleAppsCommand.definedKey.size.toolarge=Key does not meet the CalNet passphrase requirements for length.
-bappsController$GoogleAppsCommand.definedKeyConfirmation.size.toosmall=Key Confirmation does not meet the CalNet passphrase requirements for length.
-bappsController$GoogleAppsCommand.definedKeyConfirmation.size.toolarge=Key Confirmation does not meet the CalNet passphrase requirements for length.
+bappsController$GoogleAppsCommand.definedToken.size.toosmall=Key does not meet the CalNet passphrase requirements for length.
+bappsController$GoogleAppsCommand.definedToken.size.toolarge=Key does not meet the CalNet passphrase requirements for length.
+bappsController$GoogleAppsCommand.definedTokenConfirmation.size.toosmall=Key Confirmation does not meet the CalNet passphrase requirements for length.
+bappsController$GoogleAppsCommand.definedTokenConfirmation.size.toolarge=Key Confirmation does not meet the CalNet passphrase requirements for length.
 googleAppsCommand.definedKey.donotmatch=Key and Key Confirmation do not match.
 googleAppsCommand.definedKeyConfirmation.donotmatch=Key and Key Confirmation do not match.
 googleAppsCommand.definedKey.cannotmatchcalnet=Key can not be the same as your CalNet Passphrase.
@@ -86,9 +86,11 @@ main.index.title=Welcome
 bapps.index.title=bApps (Google) Login Key Options
 bapps.choose.title=Choose bApps (Google) Account
 bapps.set.title=Set bApps (Google) Login Key
+bapps.save.title=Set bApps (Google) Login Key
 bapps.view.title=Your bApps (Google) Login Key
 bapps.delete.title=Delete bApps (Google) Login Key
 wpa.index.title=AirBears2 Login Key Option(s)
+wpa.set.title=Set AirBears2 Login Key
 wpa.set.title=Set AirBears2 Login Key
 wpa.view.title=Your AirBears2 Login Key
 wpa.delete.title=Delete AirBears2 Login Key
@@ -182,7 +184,7 @@ bapps.alert.delete.success=bApps Login Key deleted successfully for account <str
 bapps.alert.delete.successForTitle=bApps Login Key deleted successfully for account {0}.
 bapps.alert.save.canNotSetError=If you choose the generated key, you must not change its value.
 bapps.alert.save.canNotSetErrorForTitle=If you choose the generated key, you must not change its value.
-bapps.alert.save.errorForTitle=Error(s) setting key. See more details below.
+bapps.alert.save.errorForTitle=Error(s) setting key: 
 
 # Email messages, so do not use HTML.
 # See myt-config.properties for the Subjects.
