Updated and added messsages as part of the accessibility modifications; ticket MMT-8.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -74,6 +74,23 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 general.appName=Manage My Keys
 general.manage=Manage
 general.keys=Keys
+general.returnToOptions=&laquo; Return to Key Options
+general.viewPage.yourKeyIs=Your Key Is
+
+general.calNetPassphraseRequirements=<ol>\n \
+<li>A minimum length of 9 characters (maximum 255). It may also include spaces (which is why we call it a passphrase).</li> \n \
+<li>It must contain characters from at least three of the following four character groups: \n \
+    <ol> \n \
+        <li>English uppercase (A through Z)</li> \n \
+        <li>English lowercase (a through z)</li> \n \
+        <li>numeric digits (0 through 9)</li> \n \
+        <li>non-alphanumeric characters (such as !, $, #, or %)</li> \n \
+    </ol> \n \
+<li>Without regard to case, the passphrase may not contain your first name, middle name, last name, or your CalNet ID itself if any of these are three characters or longer. (See the document Passwords must meet complexity requirements for the CalNetAD passphrase rules with which all CalNet passphrases also must be compatible.)</li> \n \
+<li>Any time you change your passphrase, the new one may not be the same as the current or previous passphrase.</li> \n \
+</ol> \n \
+<div class="alert alert-info"><strong>Note:</strong> The space character does not fall under any of the four character groups, and does not count toward the passphrase complexity requirements.</div>
+### End of CalNet Passphrase Requirements
 
 # Navigation
 navigation.manage.wpa=AirBears2 Login Key
@@ -131,6 +148,7 @@ wpa.view.returnToIndexLink=&laquo; Return to Key Options
 bapps.choose.heading=Choose bApps (Google) Account
 bapps.index.heading=bApps Login Key <small>for account {0}</small>
 bapps.index.generalMessage=This system will generate a login key that will enable you to access your Berkeley Google Apps for Education account (bMail, bCal, bDocs) for mobile devices and desktop clients.</p><p>For more information on Berkeley Google Apps for Education, please see the <a href="http://technology.berkeley.edu/productivity-suite/google/index.html" target="_blank">bMail | bCal Productivity Suite project page</a>.</p><p>Proceeding to generate a new bApps (Google) Login Key will invalidate any previously generated Login Key. If you have entered a previously generated key in any of your devices, you will need to re-enter the new key on those devices.
+bapps.index.deleteNote=<strong>Note:</strong> The "Delete Key..." option appears below even if you have never set your key for this account. Google does not let us know if you have previously set a key, so we have no choice but to offer you the option to delete it.
 bapps.index.optionsHeading=Key Options
 bapps.index.optionsSetLink=Set Key...
 bapps.index.optionsViewLink=View Key...
@@ -142,7 +160,8 @@ bapps.noaccounts.generalMessage=According to our records, you currently do not h
 
 bapps.setPage.heading=Set bApps Login Key <small>for account {0}</small>
 bapps.setPage.legend=Generate Key
-bapps.setPage.generalMessage=Use the form below to set your bApps Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by clicking on "Define Your Own" tab and then entering a key in the provided form.
+bapps.setPage.preGeneratedMessage=Use the form below to set your bApps Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by clicking on "Define Your Own" tab and then entering a key in the provided form.
+bapps.setPage.defineYourOwnMessage=Use the form below to enter your own bApps Login Key for account <strong>{0}</strong>. If you do not want to set your own key, you can click on the "Pre-Generated" tab and use a key which was been auto-generated for you.
 
 bapps.delete.heading=Delete bApps Login Key <small>for account {0}</small>
 bapps.delete.generalMessage=If you wish to delete your bApps Login Key for account <strong>{0}</strong>, click the "Delete Key" button below.
@@ -150,7 +169,7 @@ bapps.delete.deleteInfo=<strong>Note:</strong> If you have not previously set a 
 
 bapps.formPage.generateKey=Generate a different key...
 bapps.formPage.keyHelpText=Once you save the key, you will be taken to another page where you can select and copy the key.
-bapps.formPage.keyHelpTextForUserDefined=Key must meet the same requirements as the <a href="https://wikihub.berkeley.edu/display/calnet/Passphrase+Requirements" target="_blank">CalNet passphrase</a>, but the key <strong>can not be the same as your current CalNet passphrase</strong>.
+bapps.formPage.keyHelpTextForUserDefined=Key must meet the <a data-toggle="modal" href="#passphraseRequirements" >CalNet Passphrase Requirements</a>, but the key <strong>can not be the same as your current CalNet passphrase</strong>.
 
 bapps.viewPage.heading=Your bApps Login Key <small>for account {0}</small>
 bapps.viewPage.generalMessage=Your bApps Login Key for account <strong>{0}</strong> is below. Please copy this key to your clipboard immediately so that you have it, as this is the only time you will be able to view this key.
