Added genera.applicationError which has a general message for what to do when the application encounters an error; ticket MMT-6.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -76,6 +76,7 @@ general.manage=Manage
 general.keys=Keys
 general.returnToOptions=&laquo; Return to Key Options
 general.viewPage.yourKeyIs=Your Key Is
+genera.applicationError=The Manage My Keys application has encountered an error. Please try what you were doing again. If the problem happens again, please email <a href="mailto:calnet-admin@lists.berkeley.edu">CalNet Admin</a>.
 
 general.calNetPassphraseRequirements=<ol>\n \
 <li>A minimum length of 9 characters (maximum 255). It may also include spaces (which is why we call it a passphrase).</li> \n \
