--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -76,7 +76,8 @@ general.manage=Manage
 general.keys=Keys
 general.returnToOptions=&laquo; Return to Key Options
 general.viewPage.yourKeyIs=Your Key Is
-genera.applicationError=The Manage My Keys application has encountered an error. Please try what you were doing again. If the problem happens again, please email <a href="mailto:calnet-admin@lists.berkeley.edu">CalNet Admin</a>.
+general.errorApplication=The Manage My Keys application has encountered an error. Please try what you were doing again. If the problem happens again, please email <a href="mailto:calnet-admin@lists.berkeley.edu?subject=Manage My Keys Application Error">CalNet Admin</a>.
+general.error404=The requested page does not exist in this application. Please use the navigation at the top of the application.
 
 general.calNetPassphraseRequirements=<ol>\n \
 <li>A minimum length of 9 characters (maximum 255). It may also include spaces (which is why we call it a passphrase).</li> \n \
