Updated with latest info from the PS0 team, and others.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -159,12 +159,12 @@ bapps.index.optionsDeleteLink=Delete Key...
 bapps.index.moreThanOneAccountMessage=
 bapps.index.returnToAccountsLink=&laquo; Return to Accounts List
 
-bapps.noaccounts.generalMessage=According to our records, you currently do not have any accounts on the Google Apps system. If you think this is incorrect, please contact...
+bapps.noaccounts.generalMessage=According to our records, you currently do not have any accounts on the Google Apps system. If you think this is incorrect, please contact <a href="mailto:bcal@berkeley.edu">bcal@berkeley.edu</a>.
 
 bapps.setPage.heading=Set bApps Login Key <small>for account {0}</small>
 bapps.setPage.legend=Generate Key
-bapps.setPage.preGeneratedMessage=Use the form below to set your bApps Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by clicking on "Define Your Own" tab and then entering a key in the provided form.
-bapps.setPage.defineYourOwnMessage=Use the form below to enter your own bApps Login Key for account <strong>{0}</strong>. If you do not want to set your own key, you can click on the "Pre-Generated" tab and use a key which was been auto-generated for you.
+bapps.setPage.preGeneratedMessage=Use the form below to set your bApps Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by selecting the "Define Your Own" tab, and then enter a key, and key confirmation, in the provided form.
+bapps.setPage.defineYourOwnMessage=Use the form below to enter your own bApps Login Key for account <strong>{0}</strong>. If you do not want to set your own key, you can select the "Pre-Generated" tab, and use the key which was been auto-generated for you.
 
 bapps.delete.heading=Delete bApps Login Key <small>for account {0}</small>
 bapps.delete.generalMessage=If you wish to delete your bApps Login Key for account <strong>{0}</strong>, click the "Delete Key" button below.
@@ -181,7 +181,7 @@ bapps.viewPage.returnToIndexLink=&laquo; Return to Key Options
 
 # Authentication messages
 auth.index=Please log in to use the Manage My Keys application.
-auth.failure=There was an error when trying to log you into the application. Please contact <a href="mailto:calnet-admin@lists.berkeley.edu?subject=Problem Logging into MMT app.">calnet-admin@lists.berkeley.edu</a>.
+auth.failure=There was an error when trying to log you into the application. Please contact <a href="mailto:calnet-admin@lists.berkeley.edu?subject=Problem Logging into MMK app.">calnet-admin@lists.berkeley.edu</a>.
 auth.notAuthorized=You are not authorized to use this application. If you feel you should have access to this application, please contact...
 
 # Authorization/Eligibility messages
@@ -189,7 +189,7 @@ authZ.notEligibleWpaHeader=Not Eligible
 authZ.notEligibleWpaMessage=Unfortunately you are not eligible for AirBears2 access. To check your eligibility for access to network services on the UC Berkeley campus, please visit the <a href="https://net-sec2.berkeley.edu/cgi-bin/service_eligibility/report" target="_blank">Network Service Eligibility Report</a> page.
 
 authZ.notEligibleBAppsHeader=Not Enabled/Eligible
-authZ.notEligibleBAppsMessage=Unfortunately you are either not enabled or not eligible for Google Apps. If you this you should be enabled/eligible, please contact...
+authZ.notEligibleBAppsMessage=Unfortunately you are either not enabled, or not eligible for Google Apps. If you think you should be enabled/eligible, please contact <a href="mailto:bcal@berkeley.edu">bcal@berkeley.edu</a>.
 
 # Alert messages
 wpa.alert.save.success=AirBears2 Login Key saved successfully.
