--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -183,6 +183,7 @@ bapps.viewPage.returnToIndexLink=&laquo; Return to Key Options
 auth.index=Please log in to use the Manage My Keys application.
 auth.failure=There was an error when trying to log you into the application. Please contact <a href="mailto:calnet-admin@lists.berkeley.edu?subject=Problem Logging into MMK app.">calnet-admin@lists.berkeley.edu</a>.
 auth.notAuthorized=You are not authorized to use this application. If you feel you should have access to this application, please contact...
+auth.logout=You are now logged out of the Manage My Keys application.
 
 # Authorization/Eligibility messages
 authZ.notEligibleWpaHeader=Not Eligible
