Added some missing title messages, and update the notAuthorized message.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -102,6 +102,10 @@ navigation.other=My CalNet
 
 # Page Titles
 auth.index.title=Login via CalNet
+auth.notEligibleBApps.title=Not Eligible for bApps (Google)
+auth.notEligibleWpa.title=Not Eligible for AirBears2
+auth.failure.title=Authentication (Login) Problem
+auth.notAuthorized.title=Not Eligible For MMK Access
 main.index.title=Welcome
 bapps.index.title=bApps (Google) Login Key Options
 bapps.choose.title=Choose bApps (Google) Account
@@ -182,7 +186,7 @@ bapps.viewPage.returnToIndexLink=&laquo; Return to Key Options
 # Authentication messages
 auth.index=Please log in to use the Manage My Keys application.
 auth.failure=There was an error when trying to log you into the application. Please contact <a href="mailto:calnet-admin@lists.berkeley.edu?subject=Problem Logging into MMK app.">calnet-admin@lists.berkeley.edu</a>.
-auth.notAuthorized=You are not authorized to use this application. If you feel you should have access to this application, please contact...
+auth.notAuthorized=You are not eligible to use this application. If you feel you should have access to this application, please contact...
 auth.logout=You are now logged out of the Manage My Keys application.
 
 # Authorization/Eligibility messages
