--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -4,7 +4,7 @@ wpa.username.blank=Username cannot be blank.
 wpa.password.null=Key cannot be blank.
 wpa.password.blank=Key cannot be blank.
 
-# bApps GoogleCommand messages
+# bConnected GoogleCommand messages
 bappsController$GoogleAppsCommand.definedToken.size.toosmall=Key does not meet the CalNet passphrase requirements for length.
 bappsController$GoogleAppsCommand.definedToken.size.toolarge=Key does not meet the CalNet passphrase requirements for length.
 bappsController$GoogleAppsCommand.definedTokenConfirmation.size.toosmall=Key Confirmation does not meet the CalNet passphrase requirements for length.
@@ -97,22 +97,19 @@ general.calNetPassphraseRequirements=<ol>\n \
 
 # Navigation
 navigation.manage.wpa=AirBears2 Login Key
-navigation.manage.bapps=bApps (Google) Login Key
+navigation.manage.bapps=bConnected Login Key
 navigation.other=My CalNet
 
 # Page Titles
 auth.index.title=Login via CalNet
-auth.notEligibleBApps.title=Not Eligible for bApps (Google)
-auth.notEligibleWpa.title=Not Eligible for AirBears2
-auth.failure.title=Authentication (Login) Problem
-auth.notAuthorized.title=Not Eligible For MMK Access
+auth.notAuthorized.title=Not Authorized
 main.index.title=Welcome
-bapps.index.title=bApps (Google) Login Key Options
-bapps.choose.title=Choose bApps (Google) Account
-bapps.set.title=Set bApps (Google) Login Key
-bapps.save.title=Set bApps (Google) Login Key
-bapps.view.title=Your bApps (Google) Login Key
-bapps.delete.title=Delete bApps (Google) Login Key
+bapps.index.title=bConnected Login Key Options
+bapps.choose.title=Choose bConnected Account
+bapps.set.title=Set bConnected Login Key
+bapps.save.title=Set bConnected Login Key
+bapps.view.title=Your bConnected Login Key
+bapps.delete.title=Delete bConnected Login Key
 wpa.index.title=AirBears2 Login Key Option(s)
 wpa.set.title=Set AirBears2 Login Key
 wpa.set.title=Set AirBears2 Login Key
@@ -124,7 +121,7 @@ overview.welcome=Welcome
 overview.welcomeMessage=Welcome to the Application-specific Key Management app. The login keys you generate with this application can be used from mobile devices and desktop clients. The login key is <strong>not</strong> a replacement for your CalNet Passphrase, which you will continue to use when doing web-based authentication.
 overview.optionsHeading=Choose Service
 overview.wpaLink=AirBears2
-overview.bAppsLink=bApps (Google)
+overview.bAppsLink=bConnected
 
 # WPA pages
 wpa.index.heading=AirBears2 Login Key
@@ -151,10 +148,10 @@ wpa.viewPage.regenerateButton=Set New Key
 wpa.viewPage.pageRefreshWarning=<strong>Warning:</strong> Once you leave this page you will not be able to use your back button to view the key again. So please copy the key now so that you have it saved should you leave this page. If you forget this key you can generate a new one at any time.
 wpa.view.returnToIndexLink=&laquo; Return to Key Options
 
-# bApps pages
-bapps.choose.heading=Choose bApps (Google) Account
-bapps.index.heading=bApps Login Key <small>for account {0}</small>
-bapps.index.generalMessage=This system will generate a login key that will enable you to access your Berkeley Google Apps for Education account (bMail, bCal, bDocs) for mobile devices and desktop clients.</p><p>For more information on Berkeley Google Apps for Education, please see the <a href="http://technology.berkeley.edu/productivity-suite/google/index.html" target="_blank">bMail | bCal Productivity Suite project page</a>.</p><p>Proceeding to generate a new bApps (Google) Login Key will invalidate any previously generated Login Key. If you have entered a previously generated key in any of your devices, you will need to re-enter the new key on those devices.
+# bConnected pages
+bapps.choose.heading=Choose bConnected Account
+bapps.index.heading=bConnected Login Key <small>for account {0}</small>
+bapps.index.generalMessage=This system will generate a login key that will enable you to access your Berkeley Google Apps for Education account (bMail, bCal, bDocs) for mobile devices and desktop clients.</p><p>For more information on Berkeley Google Apps for Education, please see the <a href="http://technology.berkeley.edu/productivity-suite/google/index.html" target="_blank">bMail | bCal Productivity Suite project page</a>.</p><p>Proceeding to generate a new bConnected Login Key will invalidate any previously generated Login Key. If you have entered a previously generated key in any of your devices, you will need to re-enter the new key on those devices.
 bapps.index.deleteNote=<strong>Note:</strong> The "Delete Key..." option appears below even if you have never set your key for this account. Google does not let us know if you have previously set a key, so we have no choice but to offer you the option to delete it.
 bapps.index.optionsHeading=Key Options
 bapps.index.optionsSetLink=Set Key...
@@ -162,32 +159,34 @@ bapps.index.optionsViewLink=View Key...
 bapps.index.optionsDeleteLink=Delete Key...
 bapps.index.moreThanOneAccountMessage=
 bapps.index.returnToAccountsLink=&laquo; Return to Accounts List
+bapps.index.disabledHeader=Account Disabled
+bapps.index.disabledMessage=This account is currently disabled and you may not change the key.<br />Please contact <a href="mailto:bconnected@berkeley.edu?subject=Account Disabled">bconnected@berkeley.edu</a> or 510-664-9000, option 1, for assistance.
 
 bapps.noaccounts.generalMessage=According to our records, you currently do not have any accounts on the Google Apps system. If you think this is incorrect, please contact <a href="mailto:bcal@berkeley.edu">bcal@berkeley.edu</a>.
 
-bapps.setPage.heading=Set bApps Login Key <small>for account {0}</small>
+bapps.setPage.heading=Set bConnected Login Key <small>for account {0}</small>
 bapps.setPage.legend=Generate Key
-bapps.setPage.preGeneratedMessage=Use the form below to set your bApps Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by selecting the "Define Your Own" tab, and then enter a key, and key confirmation, in the provided form.
-bapps.setPage.defineYourOwnMessage=Use the form below to enter your own bApps Login Key for account <strong>{0}</strong>. If you do not want to set your own key, you can select the "Pre-Generated" tab, and use the key which was been auto-generated for you.
+bapps.setPage.preGeneratedMessage=Use the form below to set your bConnected Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by selecting the "Define Your Own" tab, and then enter a key, and key confirmation, in the provided form.
+bapps.setPage.defineYourOwnMessage=Use the form below to enter your own bConnected Login Key for account <strong>{0}</strong>. If you do not want to set your own key, you can select the "Pre-Generated" tab, and use the key which was been auto-generated for you.
 
-bapps.delete.heading=Delete bApps Login Key <small>for account {0}</small>
-bapps.delete.generalMessage=If you wish to delete your bApps Login Key for account <strong>{0}</strong>, click the "Delete Key" button below.
+bapps.delete.heading=Delete bConnected Login Key <small>for account {0}</small>
+bapps.delete.generalMessage=If you wish to delete your bConnected Login Key for account <strong>{0}</strong>, click the "Delete Key" button below.
 bapps.delete.deleteInfo=<strong>Note:</strong> If you have not previously set a key, this will report a successful deletion.
 
 bapps.formPage.generateKey=Generate a different key...
 bapps.formPage.keyHelpText=Once you save the key, you will be taken to another page where you can select and copy the key.
 bapps.formPage.keyHelpTextForUserDefined=Key must meet the <a data-toggle="modal" href="#passphraseRequirements" >CalNet Passphrase Requirements</a>, but the key <strong>can not be the same as your current CalNet passphrase</strong>.
 
-bapps.viewPage.heading=Your bApps Login Key <small>for account {0}</small>
-bapps.viewPage.generalMessage=Your bApps Login Key for account <strong>{0}</strong> is below. Please copy this key to your clipboard immediately so that you have it, as this is the only time you will be able to view this key.
+bapps.viewPage.heading=Your bConnected Login Key <small>for account {0}</small>
+bapps.viewPage.generalMessage=Your bConnected Login Key for account <strong>{0}</strong> is below. Please copy this key to your clipboard immediately so that you have it, as this is the only time you will be able to view this key.
 bapps.viewPage.pageRefreshWarning=<strong>Note:</strong> Once you leave this page you will not be able to use your back button to view the key again. So please copy the key now so that you have it saved should you leave this page. If you forget this key you can generate a new one at any time and you will need to replace it on all your configured devices.
 bapps.viewPage.returnToIndexLink=&laquo; Return to Key Options
 
 # Authentication messages
 auth.index=Please log in to use the Manage My Keys application.
 auth.failure=There was an error when trying to log you into the application. Please contact <a href="mailto:calnet-admin@lists.berkeley.edu?subject=Problem Logging into MMK app.">calnet-admin@lists.berkeley.edu</a>.
-auth.notAuthorized=You are not eligible to use this application. If you feel you should have access to this application, please contact...
-auth.logout=You are now logged out of the Manage My Keys application.
+auth.notAuthorized=You are not authorized to use this application. If you feel you should have access to this application, please contact <a href="mailto:bconnected@berkeley.edu?subject=Access to MMK Application">bconnected@berkeley.edu</a>.
+auth.logout=You are now logged out.
 
 # Authorization/Eligibility messages
 authZ.notEligibleWpaHeader=Not Eligible
@@ -204,11 +203,11 @@ wpa.alert.delete.successForTitle=AirBears2 Login Key deleted successfully.
 wpa.alert.save.canNotSetError=You are not allowed to set your own key for the AirBears2 service.
 wpa.alert.save.canNotSetErrorForTitle=You are not allowed to set your own key for the AirBears2 service.
 
-bapps.alert.save.success=bApps Login Key saved successfully for account <strong>{0}</strong>. This is the key you will use on any mobile device (phones, iPads) and desktop clients.  If you need assistance in setting up your devices, please see the <a href="https://kb.berkeley.edu/jivekb/kbcategory.jspa?categoryID=102" target="_blank">Google Apps Knowledge Base</a> section.
-bapps.alert.save.successForTitleDefined=bApps Login Key saved successfully for account {0}.
-bapps.alert.save.successForTitleGenerated=bApps Login Key saved successfully for account {0}. See key details below.
-bapps.alert.delete.success=bApps Login Key deleted successfully for account <strong>{0}</strong>.
-bapps.alert.delete.successForTitle=bApps Login Key deleted successfully for account {0}.
+bapps.alert.save.success=bConnected Login Key saved successfully for account <strong>{0}</strong>. This is the key you will use on any mobile device (phones, iPads) and desktop clients.  If you need assistance in setting up your devices, please see the <a href="https://kb.berkeley.edu/jivekb/kbcategory.jspa?categoryID=102" target="_blank">Google Apps Knowledge Base</a> section.
+bapps.alert.save.successForTitleDefined=bConnected Login Key saved successfully for account {0}.
+bapps.alert.save.successForTitleGenerated=bConnected Login Key saved successfully for account {0}. See key details below.
+bapps.alert.delete.success=bConnected Login Key deleted successfully for account <strong>{0}</strong>.
+bapps.alert.delete.successForTitle=bConnected Login Key deleted successfully for account {0}.
 bapps.alert.save.canNotSetError=If you choose the generated key, you must not change its value.
 bapps.alert.save.canNotSetErrorForTitle=If you choose the generated key, you must not change its value.
 bapps.alert.save.errorForTitle=Error(s) setting key: 
@@ -234,22 +233,22 @@ This email is to confirm that you have deleted your Airbears2 Login Key via the 
 For more information on this key, AirBears2 and the UC Berkeley Wi-Fi network, please visit http://ist.berkeley.edu/airbears.
 ###
 
-### bApps Set Confirmation
+### bConnected Set Confirmation
 bapps.email.setConfirmation=Hello {0},\n \
 \n \
-This email is to confirm that you have generated a new bApps (Google) Login Key for account {1} via the Manage My Keys application at {2}.\n \
+This email is to confirm that you have generated a new bConnected Login Key for account {1} via the Manage My Keys application at {2}.\n \
 \n \
-If you did not generate your key, please contact consult@berkeley.edu immediately.\n \
+If you did not generate your key, please contact bconnected@berkeley.edu immediately.\n \
 \n \
 If you need assistance in setting up your devices, please see the Google Apps Knowledge Base section (https://kb.berkeley.edu/jivekb/kbcategory.jspa?categoryID=102).
 ###
 
-### bApps Delete Confirmation
+### bConnected Delete Confirmation
 bapps.email.deleteConfirmation=Hello {0},\n \
 \n \
-This email is to confirm that you have deleted a bApps (Google) Login Key for account {1} via the Manage My Keys application at {2}.\n \
+This email is to confirm that you have deleted a bConnected Login Key for account {1} via the Manage My Keys application at {2}.\n \
 \n \
-If you did not delete your key, please contact consult@berkeley.edu immediately.
+If you did not delete your key, please contact bconnected@berkeley.edu immediately.
 ###
 
 # Log messages - Not used because you can not get messages in a service
