Updated 'getting help' message based on Mimi's feedback.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -203,7 +203,7 @@ wpa.alert.delete.successForTitle=AirBears2 Login Key deleted successfully.
 wpa.alert.save.canNotSetError=You are not allowed to set your own key for the AirBears2 service.
 wpa.alert.save.canNotSetErrorForTitle=You are not allowed to set your own key for the AirBears2 service.
 
-bapps.alert.save.success=bConnected Login Key saved successfully for account <strong>{0}</strong>. This is the key you will use on any mobile device (phones, iPads) and desktop clients.  If you need assistance in setting up your devices, please see the <a href="https://kb.berkeley.edu/jivekb/kbcategory.jspa?categoryID=102" target="_blank">Google Apps Knowledge Base</a> section.
+bapps.alert.save.success=bConnected Login Key saved successfully for account <strong>{0}</strong>. This is the key you will use on any mobile device (phones, iPads) and desktop clients. If you need assistance in using the bConnected suite of collaboration tools, please see the bConnected section of the <a href="https://kb.berkeley.edu/campus-shared-services/search.php?q=&cat=2326" target="_blank">Campus Shared Services Knowledge Base</a>.
 bapps.alert.save.successForTitleDefined=bConnected Login Key saved successfully for account {0}.
 bapps.alert.save.successForTitleGenerated=bConnected Login Key saved successfully for account {0}. See key details below.
 bapps.alert.delete.success=bConnected Login Key deleted successfully for account <strong>{0}</strong>.
@@ -240,7 +240,7 @@ This email is to confirm that you have generated a new bConnected Login Key for 
 \n \
 If you did not generate your key, please contact bconnected@berkeley.edu immediately.\n \
 \n \
-If you need assistance in setting up your devices, please see the Google Apps Knowledge Base section (https://kb.berkeley.edu/jivekb/kbcategory.jspa?categoryID=102).
+If you need assistance in using the bConnected suite of collaboration tools, please see the bConnected section of the Campus Shared Services Knowledge Base at https://kb.berkeley.edu/campus-shared-services/search.php?q=&cat=2326.
 ###
 
 ### bConnected Delete Confirmation
