Finished cleaning up Controller and GoogleAppService code. Still need to test if it works against a Google Instance

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -5,15 +5,11 @@ wpa.password.null=Key cannot be blank.
 wpa.password.blank=Key cannot be blank.
 
 # bConnected GoogleCommand messages
-bappsController$GoogleAppsCommand.definedToken.size.toosmall=Key does not meet the CalNet passphrase requirements for length.
-bappsController$GoogleAppsCommand.definedToken.size.toolarge=Key does not meet the CalNet passphrase requirements for length.
-bappsController$GoogleAppsCommand.definedTokenConfirmation.size.toosmall=Key Confirmation does not meet the CalNet passphrase requirements for length.
-bappsController$GoogleAppsCommand.definedTokenConfirmation.size.toolarge=Key Confirmation does not meet the CalNet passphrase requirements for length.
-googleAppsCommand.definedToken.cannotbeblank=Key can not be blank.
-googleAppsCommand.definedKey.donotmatch=Key and Key Confirmation do not match.
-googleAppsCommand.definedKeyConfirmation.donotmatch=Key and Key Confirmation do not match.
-googleAppsCommand.definedKey.cannotmatchcalnet=Key can not be the same as your CalNet Passphrase.
-googleAppsCommand.definedKey.doesnotmeetrequirements=Key does not meet the CalNet Passphrase complexity requirements.
+bappsController$GoogleAppsCommand.token.size.toosmall=Key does not meet the CalNet passphrase requirements for length.
+bappsController$GoogleAppsCommand.token.size.toolarge=Key does not meet the CalNet passphrase requirements for length.
+bappsController$GoogleAppsCommand.tokenRepeat.donotmatch=Key and Key Confirmation do not match.
+bappsController$GoogleAppsCommand.token.cannotmatchcalnet=Key can not be the same as your CalNet Passphrase.
+bappsController$GoogleAppsCommand.token.doesnotmeetrequirements=Key does not meet the CalNet Passphrase complexity requirements.
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
@@ -112,7 +108,6 @@ bapps.view.title=Your bConnected Login Key
 bapps.delete.title=Delete bConnected Login Key
 wpa.index.title=AirBears2 Login Key Option(s)
 wpa.set.title=Set AirBears2 Login Key
-wpa.set.title=Set AirBears2 Login Key
 wpa.view.title=Your AirBears2 Login Key
 wpa.delete.title=Delete AirBears2 Login Key
 
@@ -203,56 +198,14 @@ wpa.alert.delete.successForTitle=AirBears2 Login Key deleted successfully.
 wpa.alert.save.canNotSetError=You are not allowed to set your own key for the AirBears2 service.
 wpa.alert.save.canNotSetErrorForTitle=You are not allowed to set your own key for the AirBears2 service.
 
-bapps.alert.save.success=bConnected Login Key saved successfully for account <strong>{0}</strong>. This is the key you will use on any mobile device (phones, iPads) and desktop clients. If you need assistance in using the bConnected suite of collaboration tools, please see the bConnected section of the <a href="https://kb.berkeley.edu/campus-shared-services/search.php?q=&cat=2326" target="_blank">Campus Shared Services Knowledge Base</a>.
 bapps.alert.save.successForTitleDefined=bConnected Login Key saved successfully for account {0}.
 bapps.alert.save.successForTitleGenerated=bConnected Login Key saved successfully for account {0}. See key details below.
-bapps.alert.delete.success=bConnected Login Key deleted successfully for account <strong>{0}</strong>.
+bapps.alert.save.success=bConnected Login Key saved successfully for account <strong>{0}</strong>. This is the key you will use on any mobile device (phones, iPads) and desktop clients. If you need assistance in using the bConnected suite of collaboration tools, please see the bConnected section of the <a href="https://kb.berkeley.edu/campus-shared-services/search.php?q=&cat=2326" target="_blank">Campus Shared Services Knowledge Base</a>.
 bapps.alert.delete.successForTitle=bConnected Login Key deleted successfully for account {0}.
-bapps.alert.save.canNotSetError=If you choose the generated key, you must not change its value.
-bapps.alert.save.canNotSetErrorForTitle=If you choose the generated key, you must not change its value.
-bapps.alert.save.errorForTitle=Error(s) setting key: 
+bapps.alert.delete.success=bConnected Login Key deleted successfully for account <strong>{0}</strong>.
+bapps.alert.delete.failedTitle=bConnected Login Key delete failed for account {0}.
+bapps.alert.delete.failed=bConnected Login Key was not deleted for account <strong>{0}</strong>. This was dDue to a communication error with a backend system. The error has been logged. Please try again later.
+bapps.alert.save.errorForTitle=Error(s) setting key:
+bapps.alert.save.failedTitle=bConnected Login Key saved failed for account {0}.
+bapps.alert.save.failed=bConnected Login Key was not saved for account <strong>{0}</strong>. This was dDue to a communication error with a backend system. The error has been logged. Please try again later.
 
-# Email messages, so do not use HTML.
-# See myt-config.properties for the Subjects.
-# These are multi-line messages, so be careful when editing.
-# The ### marks are just to show where they begin and end.
-
-### WPA Set Confirmation
-wpa.email.setConfirmation=Hello {0},\n \
-\n \
-This email is to confirm that you have generated a new Airbears2 Login Key via the Manage My Keys application at {1}.\n \
-\n \
-For more information on this key, AirBears2 and the UC Berkeley Wi-Fi network, please visit http://ist.berkeley.edu/airbears.
-###
-
-### WPA Delete Confirmation
-wpa.email.deleteConfirmation=Hello {0},\n \
-\n \
-This email is to confirm that you have deleted your Airbears2 Login Key via the Manage My Keys application at {1}.\n \
-\n \
-For more information on this key, AirBears2 and the UC Berkeley Wi-Fi network, please visit http://ist.berkeley.edu/airbears.
-###
-
-### bConnected Set Confirmation
-bapps.email.setConfirmation=Hello {0},\n \
-\n \
-This email is to confirm that you have generated a new bConnected Login Key for account {1} via the Manage My Keys application at {2}.\n \
-\n \
-If you did not generate your key, please contact bconnected@berkeley.edu immediately.\n \
-\n \
-If you need assistance in using the bConnected suite of collaboration tools, please see the bConnected section of the Campus Shared Services Knowledge Base at https://kb.berkeley.edu/campus-shared-services/search.php?q=&cat=2326.
-###
-
-### bConnected Delete Confirmation
-bapps.email.deleteConfirmation=Hello {0},\n \
-\n \
-This email is to confirm that you have deleted a bConnected Login Key for account {1} via the Manage My Keys application at {2}.\n \
-\n \
-If you did not delete your key, please contact bconnected@berkeley.edu immediately.
-###
-
-# Log messages - Not used because you can not get messages in a service
-wpa.log.setKey=Set WPA key for: [uid: {0}], [username: {1}].
-wpa.log.deleteKey=Deleted WPA key for: [uid: {0}], [username: {1}].
-bapps.log.setKey=Set Google Apps key for: [uid: {0}], [username: {1}], [account: {2}].
-bapps.log.deleteKey=Deleted (set random) Google Apps key for: [uid: {0}], [username: {1}], [account: {2}].
