--- a/grails-app/i18n/email.properties
+++ b/grails-app/i18n/email.properties
@@ -3,7 +3,8 @@
 # The ### marks are just to show where they begin and end.
 
 ### WPA Set Confirmation
-wpa.email.setConfirmation=Hello {0},\n\n\
+wpa.email.setConfirmation.subject = 'AirBears2 Login Key Set'
+wpa.email.setConfirmation.body=Hello {0},\n\n\
 This email is to confirm that you have generated a new Airbears2 Login Key via the Manage My Keys application at {1}.\n\n\
 For more information on this key, AirBears2 and the UC Berkeley Wi-Fi network, please visit http://ist.berkeley.edu/airbears.\
 \n\n\n\
@@ -12,7 +13,8 @@ The CalNet Team.
 ###
 
 ### WPA Delete Confirmation
-wpa.email.deleteConfirmation=Hello {0},\n\n\
+wpa.email.deleteConfirmation.subject = 'AirBears2 Login Key Deleted'
+wpa.email.deleteConfirmation.body=Hello {0},\n\n\
 This email is to confirm that you have deleted your Airbears2 Login Key via the Manage My Keys application at {1}.\n\n\
 For more information on this key, AirBears2 and the UC Berkeley Wi-Fi network, please visit http://ist.berkeley.edu/airbears.\
 \n\n\n\
@@ -21,7 +23,8 @@ The CalNet Team.
 ###
 
 ### bConnected Set Confirmation
-bapps.email.setConfirmation=Hello {0},\n\n\
+bapps.email.setConfirmation.subject = 'bConnected Login Key Set'
+bapps.email.setConfirmation.body=Hello {0},\n\n\
 This email is to confirm that you have generated a new bConnected Login Key for account {1} via the Manage My Keys application at {2}.\n\n\
 If you did not generate your key, please contact bconnected@berkeley.edu immediately.\n\n\
 If you need assistance in using the bConnected suite of collaboration tools, please see the bConnected section of the Campus Shared Services Knowledge Base at https://kb.berkeley.edu/campus-shared-services/search.php?q=&cat=2326.\
@@ -31,7 +34,8 @@ The CalNet Team.
 ###
 
 ### bConnected Delete Confirmation
-bapps.email.deleteConfirmation=Hello {0},\n\n\
+bapps.email.deleteConfirmation.subject = 'bConnected Login Key Deleted'
+bapps.email.deleteConfirmation.body=Hello {0},\n\n\
 This email is to confirm that you have deleted a bConnected Login Key for account {1} via the Manage My Keys application at {2}.\n\n\
 If you did not delete your key, please contact bconnected@berkeley.edu immediately.\
 \n\n\n\
